--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rosidl_generator_dds_idl
 	base = 6229a92
-	trimbase = f9265fa
+	trimbase = 
 	parent = upstream
 	previous = de092bc
