--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rosidl_generator_dds_idl
-	base = b446775
-	trimbase = 
+	base = e2a13ad
+	trimbase = b446775
 	parent = upstream
 	previous = 8933164
