--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d236670
+	base = 4f6d748
 	trimbase = 
 	parent = debian/turbulent/rosidl_generator_dds_idl
-	previous = 
+	previous = d236670
