--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d745e11
-	base = db8f129
-	trim = 
-	trimbase = 
+	base = c37543b
+	trim = rosidl_generator_dds_idl
+	trimbase = db8f129
