--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/rosidl_generator_dds_idl
-	previous = 
-	base = c37543b
+	previous = c37543b
+	base = af003c0
 	trim = 
 	trimbase = 
