--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/eloquent/rosidl_generator_dds_idl
-	previous = 
-	base = 6cb134e
+	previous = 6cb134e
+	base = d73a6eb
 	trim = 
 	trimbase = 
