--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rosidl_generator_dds_idl
-	base = d4fa47b
-	trimbase = 
+	base = 49a05c2
+	trimbase = d4fa47b
 	parent = upstream
 	previous = bf2369c
