--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rosidl_generator_dds_idl
-	base = 2497b8b
-	trimbase = 
+	base = 924159a
+	trimbase = 2497b8b
 	parent = upstream
 	previous = 9b3ea05
