--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rosidl_generator_dds_idl
 	base = 4c24565
-	trimbase = da3e21e
+	trimbase = 
 	parent = upstream
 	previous = de092bc
