--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 02bf573
-	base = ca7b83b
-	trim = 
-	trimbase = 
+	base = ed3498d
+	trim = rosidl_generator_dds_idl
+	trimbase = ca7b83b
