--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rosidl_generator_dds_idl
-	previous = 
-	base = d10c927
+	previous = d10c927
+	base = 4636a8b
 	trim = 
 	trimbase = 
