--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rosidl_generator_dds_idl
-	previous = 
-	base = ed3498d
+	previous = ed3498d
+	base = de18a67
 	trim = 
 	trimbase = 
