--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rosidl_generator_dds_idl
-	previous = 
-	base = d952b04
+	previous = d952b04
+	base = 21c801e
 	trim = 
 	trimbase = 
