--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rosidl_generator_dds_idl
-	previous = 
-	base = c230cd7
+	previous = c230cd7
+	base = a5a7134
 	trim = 
 	trimbase = 
