--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 101b67e
-	base = 02dba83
+	base = adcc988
 	trim = rosidl_generator_dds_idl
-	trimbase = 
+	trimbase = 02dba83
