--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.8.0-2": ["Tue Feb 08 2022", "Shane Loretz", "sloretz@openrobotics.org"], "0.8.1-1": ["Wed Mar 30 2022", "Shane Loretz", "sloretz@openrobotics.org"]}
+{"0.8.1-2": ["Tue Apr 19 2022", "Shane Loretz", "sloretz@openrobotics.org"], "0.8.1-1": ["Wed Mar 30 2022", "Shane Loretz", "sloretz@openrobotics.org"], "0.8.0-2": ["Tue Feb 08 2022", "Shane Loretz", "sloretz@openrobotics.org"]}
