--- a/tracks.yaml
+++ b/tracks.yaml
@@ -195,8 +195,7 @@ tracks:
     ros_distro: humble
     vcs_type: git
     vcs_uri: https://github.com/ros2/rosidl_dds.git
-    version: 0.8.1
-    version_saved: :{auto}
+    version: :{auto}
   r2b2:
     actions:
     - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
